--- a/complex.html
+++ b/complex.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Foma Example</title>
+    <title>Foma Complex Example</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="main"></div>
-    <script src="js/demo.js"></script>
+    <script src="js/complex.js"></script>
 </body>
 </html>
